# nflow

./: .gitignore  Cargo.toml  README.md  default_config.toml  deploy.sh
docs/: LESSONS.md  code-review.md  hint-mode.md  menu-search.md  pluck.md  scroll-mode.md  text-select.md  tiling.md
src/: ax.rs  config.rs  daemon.rs  hotkey.rs  lib.rs  main.rs  screen.rs  space.rs  statusbar.rs  tiling.rs  toast.rs  types.rs  watcher.rs
src/hint/: click.rs  collect.rs  copylink.rs  geometry.rs  labels.rs  matcher.rs  mod.rs  overlay.rs
src/menusearch/: collect.rs  fuzzy.rs  mod.rs  overlay.rs
src/pluck/: collect.rs  mod.rs  overlay.rs
src/scroll/: mod.rs  wheel.rs
src/textselect/: mod.rs  motions.rs  search.rs
